Update to Symfony 5

--- a/composer.json
+++ b/composer.json
@@ -5,14 +5,14 @@
     "require": {
         "php": "^7.3",
         "api-platform/core": "^2.6",
-        "symfony/framework-bundle": "^4.1.12",
-        "dbp/api-core-bundle": "@dev"
+        "symfony/framework-bundle": "^5.2",
+        "dbp/api-core-bundle": "main-dev"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.16",
         "phpstan/phpstan": "^0.12.33",
         "phpstan/phpstan-phpunit": "^0.12.13",
-        "symfony/phpunit-bridge": "^4.4",
+        "symfony/phpunit-bridge": "^5.2",
         "vimeo/psalm": "^4.2.1"
     },
     "repositories": [
