Port to cs-fixer 3.0

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "dbp/api-core-bundle": "main-dev"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.16",
+        "friendsofphp/php-cs-fixer": "^3.0",
         "phpstan/phpstan": "^0.12.33",
         "phpstan/phpstan-phpunit": "^0.12.13",
         "symfony/phpunit-bridge": "^5.2",
@@ -58,7 +58,7 @@
             "@php vendor/bin/php-cs-fixer --ansi fix"
         ],
         "cs": [
-            "@php vendor/bin/php-cs-fixer --ansi fix --dry-run --diff --diff-format=udiff"
+            "@php vendor/bin/php-cs-fixer --ansi fix --dry-run --diff"
         ],
         "coverage": [
             "@php vendor/bin/simple-phpunit --coverage-html _coverage"
