Use phpunit directly

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "friendsofphp/php-cs-fixer": "^3.0",
         "phpstan/phpstan": "^1.0.0",
         "phpstan/phpstan-phpunit": "^1.0.0",
+        "phpunit/phpunit": "^9",
         "symfony/phpunit-bridge": "^5.2",
         "vimeo/psalm": "^4.2.1"
     },
@@ -33,14 +34,12 @@
     },
     "scripts": {
         "test": [
-            "@php vendor/bin/simple-phpunit"
+            "@php vendor/bin/phpunit"
         ],
         "phpstan": [
-            "@php vendor/bin/simple-phpunit --atleast-version 0",
             "@php vendor/bin/phpstan analyze --ansi"
         ],
         "psalm": [
-            "@php vendor/bin/simple-phpunit --atleast-version 0",
             "@php vendor/bin/psalm"
         ],
         "lint": [
