CI: test with PHP 8.1

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,6 +38,12 @@ test-php8.0:
     PHP: "php8.0"
   <<: *test_defaults
 
+test-php8.1:
+  stage: test
+  variables:
+    PHP: "php8.1"
+  <<: *test_defaults
+
 psalm:
   stage: test
   allow_failure: true
