--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,26 +44,13 @@ test-php8.1:
     PHP: "php8.1"
   <<: *test_defaults
 
-psalm:
+linting:
   stage: test
-  allow_failure: true
   script:
     - sudo update-alternatives --set php /usr/bin/php7.4
     - composer install
-    - composer run psalm
-
-phpstan:
-  stage: test
-  allow_failure: true
-  script:
-    - sudo update-alternatives --set php /usr/bin/php7.4
-    - composer install
-    - composer run phpstan
-
-cs-fixer:
-  stage: test
-  allow_failure: true
-  script:
-    - sudo update-alternatives --set php /usr/bin/php7.4
-    - composer install
-    - composer run cs
+    - result=0
+    - composer run cs || result=1
+    - composer run phpstan || result=1
+    - composer run psalm || result=1
+    - exit $result
