--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
         "php": ">=7.3",
         "api-platform/core": "^2.6",
         "dbp/relay-core-bundle": "^0.1.34",
-        "symfony/framework-bundle": "^5.2"
+        "symfony/framework-bundle": "^5.2",
+        "symfony/orm-pack": "^2.2",
+        "symfony/uid": "^5.4"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
