--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "require": {
         "php": ">=7.3",
         "api-platform/core": "^2.6",
-        "dbp/relay-core-bundle": "^0.1.34",
+        "dbp/relay-base-person-bundle": "^0.2.1",
+        "dbp/relay-core-bundle": "^0.1.37",
         "symfony/framework-bundle": "^5.2",
         "symfony/orm-pack": "^2.2",
         "symfony/uid": "^5.4"
