Add more RequestPersistence implementation

--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -12,6 +12,10 @@ services:
     tags: ['api_platform.item_data_provider']
     autowire: true
 
+  Dbp\Relay\DispatchBundle\DataProvider\RequestRecipientItemDataProvider:
+    tags: ['api_platform.item_data_provider']
+    autowire: true
+
   Dbp\Relay\DispatchBundle\Service\DispatchService:
     autowire: true
     autoconfigure: true
