Add more RequestFile implementation and fixes and refactoring

--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -16,6 +16,16 @@ services:
     tags: ['api_platform.item_data_provider']
     autowire: true
 
+  Dbp\Relay\DispatchBundle\DataProvider\RequestFileItemDataProvider:
+    tags: ['api_platform.item_data_provider']
+    autowire: true
+
   Dbp\Relay\DispatchBundle\Service\DispatchService:
+    autowire: true
+    autoconfigure: true
+
+  Dbp\Relay\DispatchBundle\Controller\:
+    tags: ['controller.service_arguments']
+    resource: '../../Controller'
     autowire: true
     autoconfigure: true
