Add RequestStatusChange item fetching

--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -20,6 +20,10 @@ services:
     tags: ['api_platform.item_data_provider']
     autowire: true
 
+  Dbp\Relay\DispatchBundle\DataProvider\RequestStatusChangeItemDataProvider:
+    tags: ['api_platform.item_data_provider']
+    autowire: true
+
   Dbp\Relay\DispatchBundle\Service\DispatchService:
     autowire: true
     autoconfigure: true
