Add dbp:relay-dispatch:soap-to-php command

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "dbp/relay-core-bundle": "^0.1.37",
         "symfony/framework-bundle": "^5.2",
         "symfony/orm-pack": "^2.2",
-        "symfony/uid": "^5.4"
+        "symfony/uid": "^5.4",
+        "ext-simplexml": "*"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
