--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -38,6 +38,10 @@ services:
     autowire: true
     autoconfigure: true
 
+  Dbp\Relay\DispatchBundle\Command\SoapToPhpCommand:
+    autowire: true
+    autoconfigure: true
+
   Dbp\Relay\DispatchBundle\MessageHandler\RequestSubmissionHandler:
     public: false
     autowire: true
