Add generated Vendo demo api code

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "symfony/framework-bundle": "^5.2",
         "symfony/orm-pack": "^2.2",
         "symfony/uid": "^5.4",
-        "ext-simplexml": "*"
+        "ext-simplexml": "*",
+        "ext-dom": "*"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
