--- a/composer.json
+++ b/composer.json
@@ -4,14 +4,15 @@
     "license": "AGPL-3.0-or-later",
     "require": {
         "php": ">=7.3",
+        "ext-dom": "*",
+        "ext-simplexml": "*",
         "api-platform/core": "^2.6",
         "dbp/relay-base-person-bundle": "^0.2.1",
         "dbp/relay-core-bundle": "^0.1.37",
         "symfony/framework-bundle": "^5.2",
         "symfony/orm-pack": "^2.2",
         "symfony/uid": "^5.4",
-        "ext-simplexml": "*",
-        "ext-dom": "*"
+        "symfony/validator": "^5.4"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
