--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -34,7 +34,7 @@ services:
     autowire: true
     autoconfigure: true
 
-  Dbp\Relay\DispatchBundle\Command\StatusTestCommand:
+  Dbp\Relay\DispatchBundle\Command\DebugCommand:
     autowire: true
     autoconfigure: true
 
