--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "api-platform/core": "^2.6",
         "dbp/relay-base-person-bundle": "^0.2.1",
         "dbp/relay-core-bundle": "^0.1.37",
+        "guzzlehttp/guzzle": "^7.0",
         "symfony/framework-bundle": "^5.2",
         "symfony/orm-pack": "^2.2",
         "symfony/uid": "^5.4",
