--- a/composer.json
+++ b/composer.json
@@ -6,15 +6,16 @@
         "php": ">=7.3",
         "ext-dom": "*",
         "ext-simplexml": "*",
+        "ext-soap": "*",
         "api-platform/core": "^2.6",
+        "dbp/campusonline-api": "^0.2.9",
         "dbp/relay-base-person-bundle": "^0.2.1",
         "dbp/relay-core-bundle": "^0.1.44",
         "guzzlehttp/guzzle": "^7.0",
         "symfony/framework-bundle": "^5.2",
         "symfony/orm-pack": "^2.2",
         "symfony/uid": "^5.4",
-        "symfony/validator": "^5.4",
-        "ext-soap": "*"
+        "symfony/validator": "^5.4"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
