--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "dbp/campusonline-api": "^0.2.13",
         "dbp/relay-base-organization-bundle": "^0.1.10",
         "dbp/relay-base-person-bundle": "^0.2.1",
-        "dbp/relay-core-bundle": "dev-main as 0.1.44",
+        "dbp/relay-core-bundle": "^0.1.54",
         "guzzlehttp/guzzle": "^7.0",
         "symfony/framework-bundle": "^5.2",
         "symfony/orm-pack": "^2.2",
@@ -41,6 +41,9 @@
         "sort-packages": true,
         "platform": {
             "php": "7.3"
+        },
+        "allow-plugins": {
+            "composer/package-versions-deprecated": false
         }
     },
     "scripts": {
