Create a DualDeliveryService which wraps the soap client + config
To avoid confusion rename the old DualDeliveryService which wasn't actually a
symfony service to DualDeliveryClient

--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -58,6 +58,10 @@ services:
     autowire: true
     autoconfigure: true
 
+  Dbp\Relay\DispatchBundle\Service\DualDeliveryService:
+    autowire: true
+    autoconfigure: true
+
   Dbp\Relay\DispatchBundle\MessageHandler\RequestSubmissionHandler:
     public: false
     autowire: true
