Move various ebinterface types into their own subdir
so we can ignore them with linting

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -10,5 +10,6 @@ parameters:
         - tests
     excludePaths:
         - tests/bootstrap.php
-        - src/DualDeliveryApi
+        - src/DualDeliveryApi/Types
+        - src/DualDeliveryApi/Types/EBInterface
         - src/Service
