Implement status cron job

--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -67,3 +67,7 @@ services:
     autowire: true
     autoconfigure: true
     tags: ['messenger.message_handler']
+
+  Dbp\Relay\DispatchBundle\Cron\StatusCronJob:
+    autowire: true
+    autoconfigure: true
