--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "api-platform/core": "^2.6",
         "dbp/campusonline-api": "^0.2.13",
         "dbp/relay-base-person-bundle": "^0.2.1",
-        "dbp/relay-core-bundle": "^0.1.54",
+        "dbp/relay-core-bundle": "dev-main as 0.1.60",
         "guzzlehttp/guzzle": "^7.0",
         "symfony/framework-bundle": "^5.2",
         "symfony/orm-pack": "^2.2",
