Add a health check for the dual delivery service
Send a bogus status request which should result in a proper error
message (like in case of vendo, that the app id is missing and/or not found)

--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -57,3 +57,6 @@ services:
     autowire: true
     autoconfigure: true
 
+  Dbp\Relay\DispatchBundle\Service\HealthCheck:
+    autowire: true
+    autoconfigure: true
