Update renovate settings

--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -17,7 +17,15 @@
     },
     {
       "matchPackageNames": ["friendsofphp/php-cs-fixer"],
-      "allowedVersions": "<3.5"
+      "allowedVersions": "<3.5.0"
+    },
+    {
+      "matchPackageNames": ["vimeo/psalm"],
+      "allowedVersions": "<5"
+    },
+    {
+      "matchPackageNames": ["api-platform/core"],
+      "allowedVersions": "<2.7"
     }
   ]
 }
