custom normalizer for RequestRecipient address and birthday data

--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -49,3 +49,7 @@ services:
   Dbp\Relay\DispatchBundle\Service\HealthCheck:
     autowire: true
     autoconfigure: true
+
+  Dbp\Relay\DispatchBundle\Serializer\RequestRecipientNormalizer:
+    autowire: true
+    autoconfigure: true
