deriving from new core class AbstractEntityDeNormalizer to control visibility of Request and RequestRecipient attributes

--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -32,6 +32,11 @@ services:
     autowire: true
     autoconfigure: true
 
+  Dbp\Relay\DispatchBundle\Authorization\EntityNormalizer:
+    autowire: true
+    autoconfigure: true
+
+
   Dbp\Relay\DispatchBundle\Service\DualDeliveryService:
     autowire: true
     autoconfigure: true
