--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,8 @@
         "phpstan/phpstan-phpunit": "^1.0.0",
         "phpstan/phpstan-symfony": "^1.2",
         "phpunit/phpunit": "^9",
+        "symfony/browser-kit": "^5.4",
+        "symfony/http-client": "^5.4",
         "symfony/phpunit-bridge": "^5.2",
         "vimeo/psalm": "^4.2.1"
     },
