--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -16,6 +16,8 @@ services:
   Dbp\Relay\DispatchBundle\Service\GroupService:
     autowire: true
     autoconfigure: true
+    arguments:
+      $iriConverter: '@api_platform.iri_converter.legacy'
 
   Dbp\Relay\DispatchBundle\Controller\:
     tags: ['controller.service_arguments']
