Inject the entity manager instead of the registry
makes it easier to test since there are fewer dependencies

--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -12,6 +12,8 @@ services:
   Dbp\Relay\DispatchBundle\Service\DispatchService:
     autowire: true
     autoconfigure: true
+    arguments:
+      $em: '@doctrine.orm.dbp_relay_dispatch_bundle_entity_manager'
 
   Dbp\Relay\DispatchBundle\Service\GroupService:
     autowire: true
