coverage: fix with newer xdebug
requires coverage to be enabled explicitely

--- a/composer.json
+++ b/composer.json
@@ -68,7 +68,7 @@
             "@php vendor/bin/php-cs-fixer --ansi fix --dry-run --diff"
         ],
         "coverage": [
-            "@php vendor/bin/simple-phpunit --coverage-html _coverage"
+            "@php -dxdebug.mode=coverage vendor/bin/phpunit --coverage-html _coverage"
         ]
     }
 }
