--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -40,6 +40,9 @@ services:
     autowire: true
     autoconfigure: true
 
+  Dbp\Relay\DispatchBundle\Authorization\HealthCheck:
+    autowire: true
+    autoconfigure: true
 
   Dbp\Relay\DispatchBundle\Service\DualDeliveryService:
     autowire: true
