renovate: pin web-token/ packages
the released tag has the wrong PHP version restrictions

--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -19,6 +19,10 @@
     {
       "matchPackageNames": ["api-platform/core"],
       "allowedVersions": "<2.7"
+    },
+    {
+      "matchPackagePrefixes": ["web-token/"],
+      "allowedVersions": "<3"
     }
   ]
 }
