--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "ext-soap": "*",
         "api-platform/core": "^2.7.11",
         "dbp/relay-base-person-bundle": "^0.2.15",
-        "dbp/relay-core-bundle": "^0.1.98",
+        "dbp/relay-core-bundle": "dev-main as 0.1.114",
         "guzzlehttp/guzzle": "^7.0",
         "symfony/framework-bundle": "^5.2",
         "symfony/orm-pack": "^2.2",
