blob: add BlobService and implementing signing and file upload

--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -15,6 +15,10 @@ services:
     arguments:
       $em: '@doctrine.orm.dbp_relay_dispatch_bundle_entity_manager'
 
+  Dbp\Relay\DispatchBundle\Service\BlobService:
+    autowire: true
+    autoconfigure: true
+
   Dbp\Relay\DispatchBundle\Service\GroupService:
     autowire: true
     autoconfigure: true
