--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -9,6 +9,11 @@ services:
     autowire: true
     autoconfigure: true
 
+  Dbp\Relay\DispatchBundle\ApiPlatform\:
+    resource: '../../ApiPlatform'
+    autowire: true
+    autoconfigure: true
+
   Dbp\Relay\DispatchBundle\Service\DispatchService:
     autowire: true
     autoconfigure: true
