--- a/src/Resources/config/api_resources.yaml
+++ b/src/Resources/config/api_resources.yaml
@@ -72,3 +72,91 @@ resources:
         iri: 'https://schema.org/fileFormat'
       fileContentUrl:
         iri: 'http://schema.org/contentUrl'
+
+  Dbp\Relay\DispatchBundle\Entity\RequestRecipient:
+    types: ['https://schema.org/Person']
+    shortName: 'DispatchRequestRecipient'
+    normalizationContext:
+      groups: ['DispatchRequestRecipient:output']
+    denormalizationContext:
+      groups: ['DispatchRequestRecipient:input']
+
+    operations:
+
+      ApiPlatform\Metadata\GetCollection:
+        security: "is_granted('IS_AUTHENTICATED_FULLY')"
+        provider: Dbp\Relay\DispatchBundle\ApiPlatform\RequestRecipientProvider
+        uriTemplate: '/dispatch/request-recipients'
+        openapiContext:
+          tags: ["Dispatch"]
+
+      ApiPlatform\Metadata\Post:
+        security: "is_granted('IS_AUTHENTICATED_FULLY')"
+        processor: Dbp\Relay\DispatchBundle\ApiPlatform\RequestRecipientProcessor
+        uriTemplate: '/dispatch/request-recipients'
+        openapiContext:
+          tags: ["Dispatch"]
+          requestBody:
+            content:
+              application/json:
+                schema:
+                  type: "object"
+                  example:
+                    dispatchRequestIdentifier: "4d553985-d44f-404f-acf3-cd0eac7ae9c2"
+                    givenName: "Max"
+                    familyName: "Mustermann"
+                    addressCountry: "AT"
+                    postalCode: "8010"
+                    addressLocality: "Graz"
+                    streetAddress: "Am Grund"
+                    buildingNumber: "1"
+                    birthDate: "1980-01-01"
+
+      ApiPlatform\Metadata\Get:
+        security: "is_granted('IS_AUTHENTICATED_FULLY')"
+        provider: Dbp\Relay\DispatchBundle\ApiPlatform\RequestRecipientProvider
+        uriTemplate: '/dispatch/request-recipients/{identifier}'
+        openapiContext:
+          tags: ["Dispatch"]
+
+      ApiPlatform\Metadata\Delete:
+        security: "is_granted('IS_AUTHENTICATED_FULLY')"
+        provider: Dbp\Relay\DispatchBundle\ApiPlatform\RequestRecipientProvider
+        processor: Dbp\Relay\DispatchBundle\ApiPlatform\RequestRecipientProcessor
+        uriTemplate: '/dispatch/request-recipients/{identifier}'
+        openapiContext:
+          tags: ['Dispatch']
+
+    properties:
+      identifier:
+        identifier: true
+      dateCreated:
+        iri: 'https://schema.org/dateCreated'
+      request:
+      dispatchRequestIdentifier:
+        iri: 'https://schema.org/identifier'
+      givenName:
+        iri: 'https://schema.org/givenName'
+      familyName:
+        iri: 'https://schema.org/familyName'
+      addressCountry:
+        iri: 'https://schema.org/addressCountry'
+      postalCode:
+        iri: 'https://schema.org/postalCode'
+      addressLocality:
+        iri: 'https://schema.org/addressLocality'
+      streetAddress:
+        iri: 'https://schema.org/streetAddress'
+      buildingNumber:
+      birthDate:
+        iri: 'http://schema.org/birthDate'
+      dualDeliveryID:
+      appDeliveryID:
+      deliveryEndDate:
+        iri: 'https://schema.org/endDate'
+      personIdentifier:
+        iri: 'https://schema.org/identifier'
+      postalDeliverable:
+      electronicallyDeliverable:
+      lastStatusChange:
+      statusChanges:
