Use application/ld+json for the API docs examples

--- a/src/Resources/config/api_resources.yaml
+++ b/src/Resources/config/api_resources.yaml
@@ -98,7 +98,7 @@ resources:
           tags: ["Dispatch"]
           requestBody:
             content:
-              application/json:
+              application/ld+json:
                 schema:
                   type: "object"
                   example:
