--- a/composer.json
+++ b/composer.json
@@ -8,14 +8,27 @@
         "ext-json": "*",
         "ext-simplexml": "*",
         "ext-soap": "*",
+        "ext-mbstring": "*",
         "api-platform/core": "^2.7.11",
         "dbp/relay-base-person-bundle": "^0.2.15",
         "dbp/relay-blob-library": "^0.2.0",
         "dbp/relay-core-bundle": "^0.1.115",
         "symfony/framework-bundle": "^5.2",
-        "symfony/orm-pack": "^2.2",
+        "doctrine/orm": "^2.18",
+        "doctrine/doctrine-migrations-bundle": "^3.3",
+        "doctrine/dbal": "^3.8",
+        "doctrine/collections": "^1.8",
+        "doctrine/migrations": "^3.5",
         "symfony/uid": "^5.4",
-        "symfony/validator": "^5.4"
+        "symfony/validator": "^5.4",
+        "symfony/routing": "^5.4",
+        "symfony/messenger": "^5.4",
+        "symfony/console": "^5.4",
+        "symfony/config": "^5.4",
+        "symfony/http-foundation": "^5.4",
+        "symfony/http-kernel": "^5.4",
+        "symfony/dependency-injection": "^5.4",
+        "psr/log": "^1.1.4 || ^2.0 || ^3.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
