renovate: update package rules

--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -19,6 +19,10 @@
     {
       "matchPackagePrefixes": ["api-platform/core"],
       "allowedVersions": "<3"
+    },
+    {
+      "matchPackageNames": ["phpunit/phpunit"],
+      "allowedVersions": "<10"
     }
   ]
 }
