--- a/composer.json
+++ b/composer.json
@@ -10,24 +10,24 @@
         "ext-soap": "*",
         "ext-mbstring": "*",
         "api-platform/core": "^2.7.11",
-        "dbp/relay-base-person-bundle": "^0.2.15",
+        "dbp/relay-base-person-bundle": "^0.2.26",
         "dbp/relay-blob-library": "^0.2.0",
-        "dbp/relay-core-bundle": "^0.1.142",
-        "symfony/framework-bundle": "^5.2",
+        "dbp/relay-core-bundle": "^0.1.148",
+        "symfony/framework-bundle": "^5.4.30 || ^6.4",
         "doctrine/orm": "^2.18",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/dbal": "^3.8",
         "doctrine/collections": "^1.8 || ^2",
         "doctrine/migrations": "^3.5",
-        "symfony/uid": "^5.4",
-        "symfony/validator": "^5.4",
-        "symfony/routing": "^5.4",
-        "symfony/messenger": "^5.4",
-        "symfony/console": "^5.4",
-        "symfony/config": "^5.4",
-        "symfony/http-foundation": "^5.4",
-        "symfony/http-kernel": "^5.4",
-        "symfony/dependency-injection": "^5.4",
+        "symfony/uid": "^5.4 || ^6.4",
+        "symfony/validator": "^5.4 || ^6.4",
+        "symfony/routing": "^5.4 || ^6.4",
+        "symfony/messenger": "^5.4 || ^6.4",
+        "symfony/console": "^5.4 || ^6.4",
+        "symfony/config": "^5.4 || ^6.4",
+        "symfony/http-foundation": "^5.4 || ^6.4",
+        "symfony/http-kernel": "^5.4 || ^6.4",
+        "symfony/dependency-injection": "^5.4 || ^6.4",
         "psr/log": "^1.1.4 || ^2.0 || ^3.0"
     },
     "require-dev": {
@@ -36,12 +36,12 @@
         "phpstan/phpstan-phpunit": "^1.3.16",
         "phpstan/phpstan-symfony": "^1.3.7",
         "phpunit/phpunit": "^9.6.17",
-        "symfony/browser-kit": "^5.4.35",
-        "symfony/http-client": "^5.4.36",
-        "symfony/phpunit-bridge": "^5.4.36",
+        "symfony/browser-kit": "^5.4 || ^6.4",
+        "symfony/http-client": "^5.4 || ^6.4",
+        "symfony/phpunit-bridge": "^7.0.4",
         "vimeo/psalm": "^5.22.2",
-        "symfony/error-handler":"^5.4.36",
-        "symfony/monolog-bridge":"^5.4.35"
+        "symfony/error-handler":"^5.4 || ^6.4",
+        "symfony/monolog-bridge":"^5.4 || ^6.4"
     },
     "autoload": {
         "psr-4": {
