Fix the accepted content type for PATCH
In api-platform 3 application/merge-patch+json is by default the only supported
one, and also for v2 it's not documented that any other format should be used
(looks it worked by accident)

--- a/src/Resources/config/api_resources.yaml
+++ b/src/Resources/config/api_resources.yaml
@@ -298,6 +298,8 @@ resources:
         provider: Dbp\Relay\DispatchBundle\ApiPlatform\RequestProvider
         processor: Dbp\Relay\DispatchBundle\ApiPlatform\RequestProcessor
         uriTemplate: '/dispatch/requests/{identifier}'
+        inputFormats:
+          json: ['application/merge-patch+json']
         openapiContext:
           tags: ["Dispatch"]
 
