--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "ext-simplexml": "*",
         "ext-soap": "*",
         "ext-mbstring": "*",
+        "ext-libxml": "*",
         "api-platform/core": "^2.7.11 || ^3.2",
         "dbp/relay-base-person-bundle": "^0.2.26",
         "dbp/relay-blob-library": "^0.2.4",
